[package]
name = "sse"
version = "0.1.0"
authors = ["William Laeder <codylaeder@gmail.com>"]
edition = "2018"

[dependencies]
regex = "=1.1.7"
regex-syntax = "=0.6.7"
clap = "=2.33.0"
gtmpl = "=0.5.6"
gtmpl_value = "=0.3.3"
serde ="0.8.9"
serde_yaml = "0.8.9"
serde_json = "1.0.39"
toml = "0.5.1"
lazy_static = "1"

[profile.release]
lto = true
